--- a/dragDemo.html
+++ b/dragDemo.html
@@ -32,6 +32,10 @@
     }
 
     .clone-item {
+      /* 
+      fixed定位，针对整个页面的移动
+      absolute定位，针对容器下的拖动
+      */
       position: fixed;
       left: 0;
       top: 0;
